<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="6dp"
    style="@style/AppTheme"
    android:id="@+id/disconnectNoticeCard">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/disconnected_title"
        />
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/disconnected_description_1"
        />

        <Button
            android:id="@+id/openSettingsAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_settings"
        />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:paddingTop="24dp"
            android:text="@string/disconnected_description_2"
        />

        <Button
            android:id="@+id/restartAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restart"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>